--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    <main>
       <h1>Tic Tac Toe</h1>
       <div class="msg"><p id="msg"></p></div>
+      <p id="scrx"></p>
+      <p id="scr0"></p>
 
       <div class="container">
          <div class="game">
@@ -26,8 +28,9 @@
       </div>
       </div> 
      <button id="reset">Reset</button>
-     <button id="ng">new game</button>
+     <button id="ng">New game</button>
    </main>
    <script src="app.js"></script>
 </body>
 </html>
+
